fixed paragraph and image responsiveness on Tablet and Phone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,8 @@
 
 
 html {
-    height: 100%;
+    height: 150%;
+    font-size: 100%;
 }
 
 body {
@@ -28,7 +29,7 @@ main {
     display: flex;
     flex-direction: column;
     border: solid black 3px;
-   height: 100%;
+    height: 100%;
 }
 
 header {
@@ -41,18 +42,31 @@ header {
 
 h1 {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     color: var(--text-color);
-    margin: 0%;
+    margin: 1%;
+    font-size: 30px;
     margin-left: 5%;
+}
+
+h1 span {
+    margin: 2px;
+}
+
+@media screen and (max-width: 768px) {
+
+    h1 {
+        flex-direction: column;
+    }
+
 }
 
 
 nav {
-   display: flex;
-   flex-direction: column;
-   /* justify-content: center; */
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
     height: 90%;
     width: 55%;
     margin-left: 30%;
@@ -67,7 +81,15 @@ nav ul {
     justify-content: space-evenly;
     flex-wrap: wrap;
     margin-top: 2.5%;
-    margin-left:  -18%;
+    margin-left: -18%;
+}
+
+@media screen and (max-width: 768px) {
+
+    nav ul {
+        margin-top: 15%;
+    }
+
 }
 
 nav ul a {
@@ -80,7 +102,7 @@ nav ul a {
     display: flex;
     justify-content: center;
     border: solid black 3px;
-   
+
     height: 30%;
     margin: 2%;
 }
@@ -105,25 +127,69 @@ nav ul a {
     margin-left: 5%;
 }
 
-
-#my-face  {
-   /* width: 80%; */
+.image-p-flex {
+    display: flex;
+    flex: 1;
+    width: 90%
 }
 
-#my-face img{
+
+}
+
+
+#my-face {
+    /* width: 80%; */
+}
+
+#my-face img {
 
     height: 95%;
     border-radius: 100%;
 }
 
-@media screen and (max-width: 768px) {
-    #my-face img{
-        height: 136px;
-        margin-left: -22%;
-      
+#p-text {
+    font-size: 2.5rem;
+}
+
+
+@media screen and (max-width: 1180px) {
+    .image-p-flex {
+        /* font-size: 2px; */
+
+
+    }
+    #p-text {
+        font-size: 1.7rem;
+        width: 50%;
+        margin-right: 35px;
     }
 }
-    
+
+@media screen and (max-width: 768px) {
+    .image-p-flex {
+        flex-direction: column;
+        margin-right: 50px;
+        
+    }
+
+    #my-face img {
+        height: 100px;
+        margin-left: -22%;
+
+    }
+
+    #p-text {
+        display: flex;
+        /* flex-direction: column; */
+        /* justify-content: space-around; */
+        width: 150%;
+        margin-left: -60px;
+        font-size: 1rem;
+       
+    }
+
+
+}
 
 .work-section {
     border: solid black 3px;
@@ -131,7 +197,7 @@ nav ul a {
     margin: 2%;
 }
 
-.work-section h2{
+.work-section h2 {
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
@@ -159,8 +225,3 @@ footer h2 {
     margin-top: .75%;
     margin-left: 5%;
 }
-
-
-
-
-
